@@ -12,6 +12,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -42,12 +43,26 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("https://gray-ocean-09ecb650f.1.azurestaticapps.net"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+        // Allow the specific origin of your frontend
+        config.setAllowedOrigins(Arrays.asList("https://gray-ocean-09ecb650f.1.azurestaticapps.net"));
+        // Allow common methods
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Be explicit about allowed headers when AllowCredentials is true
+        // Add any custom headers your frontend might send (e.g., 'X-Auth-Token')
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "remember-me" // Add any other specific headers you might use
+        ));
+        // Allow credentials (cookies, HTTP authentication)
         config.setAllowCredentials(true);
+        // Optional: Set max age for preflight requests (improves performance by caching)
+        config.setMaxAge(3600L); // 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        // Apply this CORS configuration to all API paths
         source.registerCorsConfiguration("/**", config);
         return source;
     }
